--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,7 @@ bower_components
 build/Release
 
 # Dependency directories
-node_modules/
+resources/quest/node_modules/
 jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
